--- a/package.json
+++ b/package.json
@@ -10,16 +10,23 @@
   },
   "dependencies": {
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "gray-matter": "^4.0.3",
+    "next": "15.3.5",
+    "next-contentlayer": "^0.3.4",
+    "next-mdx-remote": "^5.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.3.5",
+    "rehype": "^13.0.2",
+    "rehype-highlight": "^7.0.2",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1",
     "typed.js": "^2.1.0"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.3.5",
-    "@eslint/eslintrc": "^3"
+    "tailwindcss": "^4"
   }
 }
