--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "@iconify/react": "^6.0.0",
     "@tailwindcss/vite": "^4.1.11",
     "clsx": "^2.1.1",
+    "gsap": "^3.13.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router": "^7.8.0",
